--- a/fe/package.json
+++ b/fe/package.json
@@ -11,10 +11,15 @@
     "pretty": "prettier --check src"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.0.1",
     "@tanstack/react-query": "^4.29.15",
+    "@tanstack/react-table": "^8.21.3",
     "axios": "^1.4.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.56.3",
+    "react-select": "^5.10.1",
+    "zod": "^3.24.4"
   },
   "devDependencies": {
     "@tanstack/eslint-plugin-query": "^4.29.9",
